added get pruduct and admin get all product route also updated the documentation
