# swagger.yaml
@@ -630,3 +630,80 @@ paths:
           description: Bad request
         500:
           description: internal server error
+
+  /products:
+    get:
+      tags:
+        - Product
+      summary: A simple get request will give you all available products
+      requestBody:
+
+      responses:
+        200:
+          description: All good success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  filteredProductNumber:
+                    type: number
+                  totalcountProduct:
+                    type: number
+                  products:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        name:
+                          type: string
+                        price:
+                          type: number
+                        description:
+                          type: string
+                        category:
+                          type: string
+                        sizes:
+                          type: array
+                          items:
+                            type: string
+                        brand:
+                          type: string
+                        ratings:
+                          type: number
+                        numberOfReviews:
+                          type: number
+                        user:
+                          type: string
+                        photos:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              id:
+                                type: string
+                              secure_url:
+                                type: string
+                        reviews:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              id:
+                                type: string
+                              comment:
+                                type: string
+                              user:
+                                type: string
+                              name:
+                                type: string
+                              rating:
+                                type: number
+        400:
+          description: Bad request
+        500:
+          description: internal server error
